--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
