--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.13.2"
+    "node": "18.17.0"
   },
   "scripts": {
     "start": "node server.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "core-js": "^3.6.5",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.1.7",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "mongoose": "^6.4.6",
+    "vue": "^3.3.7",
+    "vue-router": "^4.2.5",
     "vue3-carousel": "^0.1.36",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.1.0",
+    "vite": "^4.5.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "@vitejs/plugin-vue": "^4.4.0",
+    "sass": "^1.26.5"
   },
   "browserslist": [
     "> 1%",
